unpackaged/main/default/objects/APXT_BPM__Conductor__c/APXT_BPM__Conductor__c.object-meta.xml
<CustomObject>
    <label>Conga Conductor</label>
    <nameField>
        <displayFormat>Conductor-{0000}</displayFormat>
        <label>Conductor Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Conga Conductors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>