unpackaged/main/default/objects/APXT_BPM__Conductor__c/fields/APXT_BPM__Content_Workspace_Id__c.field-meta.xml
<CustomField>
    <fullName>APXT_BPM__Content_Workspace_Id__c</fullName>
    <inlineHelpText>The Id of a Content Workspace to which the output from a QMode=1 operation should be attached.  (Blank means to attach to the running-user's Personal Workspace.)

This setting does not affect the Content settings that apply to an individual merge event.</inlineHelpText>
    <label>Content Workspace ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>