unpackaged/main/default/objects/APXT_BPM__Conductor__c/fields/APXT_BPM__Has_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>APXT_BPM__Has_Record_Id__c</fullName>
    <formula>IF(  ISBLANK( APXT_BPM__Record_Id__c ) , 0, 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Record ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>