unpackaged/main/default/objects/APXT_BPM__Conductor__c/fields/APXT_BPM__Query_Id__c.field-meta.xml
<CustomField>
    <fullName>APXT_BPM__Query_Id__c</fullName>
    <inlineHelpText>The Id of a Conga Query that contains the list of master object ids. Optionally, the query may include other columns.</inlineHelpText>
    <label>Query ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>