unpackaged/main/default/objects/APXT_BPM__Conductor__c/validationRules/APXT_BPM__Either_Report_or_Query_Id_must_be_suppli.validationRule-meta.xml
<ValidationRule>
    <fullName>APXT_BPM__Either_Report_or_Query_Id_must_be_suppli</fullName>
    <active>true</active>
    <errorConditionFormula>AND(  ISBLANK(APXT_BPM__Report_Id__c ), ISBLANK( APXT_BPM__Query_Id__c ), ISBLANK( APXT_BPM__Record_Id__c ))</errorConditionFormula>
    <errorDisplayField>APXT_BPM__Report_Id__c</errorDisplayField>
    <errorMessage>You must supply one of the following: a Report Id, a Query Id or a Record Id.</errorMessage>
</ValidationRule>