unpackaged/main/default/objects/APXT_BPM__Conductor__c/validationRules/APXT_BPM__Not_Both_a_Report_Id_and_a_Query_Id.validationRule-meta.xml
<ValidationRule>
    <fullName>APXT_BPM__Not_Both_a_Report_Id_and_a_Query_Id</fullName>
    <active>true</active>
    <errorConditionFormula>( APXT_BPM__Has_Query_Id__c +  APXT_BPM__Has_Record_Id__c +  APXT_BPM__Has_Report_Id__c ) &gt; 1</errorConditionFormula>
    <errorDisplayField>APXT_BPM__Report_Id__c</errorDisplayField>
    <errorMessage>You must supply *only one* of the following:  a Report Id, a Query Id or a Record Id.</errorMessage>
</ValidationRule>