unpackaged/main/default/objects/APXT_BPM__Conductor__c/validationRules/APXT_BPM__Record_Id_Length.validationRule-meta.xml
<ValidationRule>
    <fullName>APXT_BPM__Record_Id_Length</fullName>
    <active>true</active>
    <errorConditionFormula>AND( APXT_BPM__Record_Id__c != "" ,

LEN( APXT_BPM__Record_Id__c ) &gt; 18)</errorConditionFormula>
    <errorDisplayField>APXT_BPM__Record_Id__c</errorDisplayField>
    <errorMessage>The Record Id must be a 15- or 18-character Salesforce ID</errorMessage>
</ValidationRule>