unpackaged/main/default/objects/APXT_BPM__Conductor__c/validationRules/APXT_BPM__Report_Id_Length.validationRule-meta.xml
<ValidationRule>
    <fullName>APXT_BPM__Report_Id_Length</fullName>
    <active>true</active>
    <errorConditionFormula>AND(  APXT_BPM__Report_Id__c != "" ,

OR( LEN(  APXT_BPM__Report_Id__c  ) &gt; 18 ,
LEFT(  APXT_BPM__Report_Id__c , 3) != "00O" ))</errorConditionFormula>
    <errorDisplayField>APXT_BPM__Report_Id__c</errorDisplayField>
    <errorMessage>The Report Id must be a 15- or 18-character Salesforce ID from a Report</errorMessage>
</ValidationRule>