unpackaged/main/default/objects/APXT_BPM__Conductor__c/validationRules/APXT_BPM__Workspace_Id_Length.validationRule-meta.xml
<ValidationRule>
    <fullName>APXT_BPM__Workspace_Id_Length</fullName>
    <active>true</active>
    <errorConditionFormula>AND(  APXT_BPM__Content_Workspace_Id__c  != "" ,

OR( LEN( APXT_BPM__Content_Workspace_Id__c ) &gt; 18 ,
LEFT( APXT_BPM__Content_Workspace_Id__c , 3) != "058" ))</errorConditionFormula>
    <errorDisplayField>APXT_BPM__Content_Workspace_Id__c</errorDisplayField>
    <errorMessage>The Workspace Id must be a 15- or 18-character Salesforce ID from a Content Worksapce.</errorMessage>
</ValidationRule>