unpackaged/main/default/objects/APXT_BPM__Conductor__c/listViews/APXT_BPM__All.listView-meta.xml
<ListView>
    <fullName>APXT_BPM__All</fullName>
    <columns>NAME</columns>
    <columns>APXT_BPM__Conductor_Environment__c</columns>
    <columns>APXT_BPM__Description__c</columns>
    <columns>APXT_BPM__Query_Id__c</columns>
    <columns>APXT_BPM__Record_Id__c</columns>
    <columns>APXT_BPM__Report_Id__c</columns>
    <columns>APXT_BPM__Title__c</columns>
    <columns>APXT_BPM__URL_Field_Name__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>